--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "bezhansalleh/filament-shield": "^4.0",
         "emmanpbarrameda/filament-take-picture-field": "^1.2.1",
         "filament/filament": "^4.0",
+        "filament/spatie-laravel-media-library-plugin": "^4.0",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "leandrocfe/filament-apex-charts": "^4.0"
